--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,1 @@
-docker==2.5.1
-docker-pycreds==0.2.1
-
-Flask==0.12
-Flask-SQLAlchemy==2.4.0
-ftfy==4.4.3
-future==0.16.0
-gensim==3.7.1
-geopandas==0.3.0
-
-grpcio==1.7.0
-grpcio-tools==1.7.0
-gunicorn==19.6.0
-h5py==2.7.1
-heroku==0.1.4
-
-Jinja2==2.9.6
-
-npm==0.1.1
-numpy==1.14.0
-oauthlib==2.0.2
-
-pandas==0.24.2
-pandocfilters==1.4.2
-
-pickleshare==0.7.4
-
-protobuf==3.5.1
-psycopg2==2.7.7
-python-dateutil==2.8.0
-
-regex==2017.7.28
-requests==2.13.0
-requests-oauthlib==0.8.0
-
-scikit-learn==0.20.2
-
-xgboost==0.90
+Collecting r
